--- a/pages/main/main.scss
+++ b/pages/main/main.scss
@@ -335,13 +335,18 @@ button{
 .pets .container{
     @include flex(column, space-between);
 }
+.animate__animated.animate__bounce {
+    --animate-duration: 1s;
+  }
 .slider__list{
         display: flex;
         column-gap: 9rem;
         margin: 0;
         margin-right: 0;
+        // animation: bounce; /* referring directly to the animation's @keyframe declaration */
+        // animation-duration: 1s; /* don't forget to set a duration! */
       }
-
+     
 .pets{
     background: $color-light-l;
     margin: 0;
@@ -1039,6 +1044,7 @@ button{
         }
         &__slider-box{
         padding-right: 1rem;
+        
         }
         &__title{
         font-size: 2.5rem;
@@ -1434,7 +1440,10 @@ button{
         }
     }      
         
-
+    // .animate__animated.animate__backInUp {
+    //     --animate-duration: 0.5s;
+    //     --animate-delay: 0.9s;
+    //   }
 
 
   
