--- a/pages/main/main.css
+++ b/pages/main/main.css
@@ -3,7 +3,6 @@
           box-sizing: border-box;
   margin: 0 auto;
   padding: 0;
-  max-width: 1280px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -36,6 +35,7 @@ button {
 .header {
   position: absolute;
   width: 100%;
+  padding: 0 5rem;
 }
 
 .header__wrapper {
@@ -121,7 +121,6 @@ button {
   font-weight: normal;
   font-size: 1.5rem;
   line-height: 160%;
-  text-decoration: none;
 }
 
 .header .list__link__disabled {
@@ -130,12 +129,13 @@ button {
 }
 
 .header .list__link__disabled:hover {
-  color: #FAFAFA;
-  cursor: pointer;
+  color: #CDCDCD;
+  cursor: none;
 }
 
 .header .list__link__disabled.disabled {
   pointer-events: none;
+  color: #CDCDCD;
 }
 
 .header .list__link__active {
@@ -220,7 +220,7 @@ button {
 }
 
 .not-only {
-  padding-top: 18rem;
+  padding: 18rem 5rem 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -367,6 +367,10 @@ button {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.animate__animated.animate__bounce {
+  --animate-duration: 1s;
 }
 
 .slider__list {
@@ -1041,8 +1045,8 @@ button {
     margin-right: 3rem;
   }
   .header {
-    padding-top: 3rem;
     top: 0;
+    padding: 3rem 0 0 0;
   }
   .header__wrapper {
     margin-top: 0;
@@ -1062,7 +1066,7 @@ button {
     margin-right: 0;
   }
   .not-only {
-    padding-top: 15rem;
+    padding: 15rem 0 0 0;
     width: 100%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1077,7 +1081,7 @@ button {
   }
   .not-only .content-section {
     margin: 0 auto;
-    max-width: 46rem;
+    width: 46rem;
     padding-bottom: 10rem;
   }
   .not-only .content-section__title {
@@ -1236,7 +1240,7 @@ button {
     top: 0;
     width: 32rem;
     background-color: #292929;
-    height: 104.1rem;
+    height: 100vh;
     -webkit-transition: -webkit-transform 0.3s ease-in-out;
     transition: -webkit-transform 0.3s ease-in-out;
     transition: transform 0.3s ease-in-out;
@@ -1308,10 +1312,11 @@ button {
     margin-left: 0;
   }
   .not-only__image {
-    padding-top: 5rem;
+    padding-top: 0rem;
     height: auto;
     width: 100%;
-    margin-left:0;
+    max-width: 37rem;
+    margin-left: 4rem;
   }
   .not-only.active-menu {
     -webkit-transition: 0.5s ease-in-out;
@@ -1531,6 +1536,9 @@ button {
 }
 
 @media screen and (max-width: 460px) {
+  .not-only__content .content-section {
+    max-width: 30rem;
+  }
   .pets .container {
     margin-top: 4.5rem;
     margin-bottom: 4.5rem;
@@ -1643,7 +1651,7 @@ button {
     top: 0;
     width: 32rem;
     background-color: #292929;
-    height: 823px;
+    height: 100vh;
     -webkit-transition: -webkit-transform 0.3s ease-in-out;
     transition: -webkit-transform 0.3s ease-in-out;
     transition: transform 0.3s ease-in-out;
