--- a/pages/main/main.scss
+++ b/pages/main/main.scss
@@ -1004,7 +1004,7 @@ button{
         }
         &__image{
             padding-top: 0rem;
-            height: auto;
+            height: 100%;
             width: 100%;
             max-width: 37rem;
             margin-left: 4rem;
