--- a/pages/main/main.scss
+++ b/pages/main/main.scss
@@ -944,18 +944,19 @@ button{
             }
         }
         .menu {
-            display: flex;    
+            display: none;    
             position: absolute;
-            right: -32rem;
+            right: 0;
             top: 0;
             width: 32rem;
             background-color:#292929;
-            height: 100vh;  
+            height: calc(var(--vh, 1vh) * 100); 
             transition: transform 0.3s ease-in-out;
         }
         .menu.active{
             transition: transform 0.3s ease-in-out;
             transform: translateX(-100%);
+            display: flex;  
         }
         .list{
             flex-direction: column;
@@ -1304,14 +1305,14 @@ button{
             z-index: 5;
         }
         .menu {
-            display: flex;    
+            display: none;    
             position: absolute;
-            right: -32rem;
+            right: 0;
             top: 0;
             width: 32rem;
             background-color:#292929;
-            height: 100vh;  
-            transition: transform 0.3s ease-in-out;
+            height: calc(var(--vh, 1vh) * 100);
+            
         }
         .menu.active{
             transition: transform 0.3s ease-in-out;
