--- a/pages/main/main.css
+++ b/pages/main/main.css
@@ -1232,8 +1232,9 @@ button {
     min-width: 18.5rem;
   }
   .header .menu {
+    z-index: 1;
     display: none;
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     width: 32rem;
