--- a/pages/main/main.css
+++ b/pages/main/main.css
@@ -1238,7 +1238,7 @@ button {
     right: 0;
     top: 0;
     width: 32rem;
-    background-color: #292929;
+    background-color: #292929d6;
     height: calc(var(--vh, 1vh) * 100);
     -webkit-transition: -webkit-transform 0.3s ease-in-out;
     transition: -webkit-transform 0.3s ease-in-out;
@@ -1270,7 +1270,7 @@ button {
     padding-bottom: 4rem;
   }
   .header .list__link {
-    font-size: 3rem;
+    font-size: 2.5rem;
     line-height: 5rem;
   }
   .header .burger-menu {
