--- a/pages/main/main.scss
+++ b/pages/main/main.scss
@@ -952,7 +952,7 @@ button{
             right: 0;
             top: 0;
             width: 32rem;
-            background-color:#292929;
+            background-color:#292929d6;
             height: calc(var(--vh, 1vh) * 100); 
             transition: transform 0.3s ease-in-out;
         }
@@ -969,7 +969,7 @@ button{
                 padding-bottom: 4rem;
             }
             &__link{
-            font-size: 3rem;
+            font-size: 2.5rem;
             line-height: 5rem;
             }
         }
