--- a/pages/main/main.css
+++ b/pages/main/main.css
@@ -174,6 +174,7 @@ button {
           align-items: center;
   width: 5rem;
   height: 5rem;
+  z-index: 2;
 }
 
 .burger-menu__line {
@@ -1661,11 +1662,10 @@ button {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    padding-top: 10rem;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
-    margin-top: 15rem;
+    margin-top: 10rem;
   }
   .header .list__item {
     padding-bottom: 4rem;
@@ -1678,6 +1678,7 @@ button {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    z-index: 2;
   }
   .not-only .content-section {
     margin-right: 0rem;
