--- a/pages/pets/pets.css
+++ b/pages/pets/pets.css
@@ -12,7 +12,7 @@
 .darkScreen {
   height: 100vh;
   width: 100vw;
-  position: absolute;
+  position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -30,9 +30,9 @@
 }
 
 .darkScreen .dark {
-  position: absolute;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
   background-color: rgba(41, 41, 41, 0.6);
   z-index: 2;
 }
@@ -222,9 +222,7 @@
 }
 
 .menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   width: 44.3rem;
   margin-left: 0;
   margin-right: 0;
@@ -247,6 +245,7 @@
 .burger-menu {
   display: none;
   cursor: pointer;
+  z-index: 2;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -330,7 +329,7 @@
 
 .list__link__disabled {
   text-decoration: none;
-  color: #CDCDCD;
+  color: #444444;
 }
 
 .list__link__disabled:hover {
@@ -819,15 +818,14 @@ ul.friends__list.slider {
     min-width: 18.5rem;
   }
   .header .menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    position: absolute;
-    right: -32rem;
+    z-index: 1;
+    display: none;
+    position: fixed;
+    right: 0;
     top: 0;
     width: 32rem;
-    background-color: #f5f5f5;
-    height: 823px;
+    background-color: #ecececf5;
+    height: calc(var(--vh, 1vh) * 100);
     -webkit-transition: -webkit-transform 0.3s ease-in-out;
     transition: -webkit-transform 0.3s ease-in-out;
     transition: transform 0.3s ease-in-out;
@@ -840,13 +838,15 @@ ul.friends__list.slider {
     transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
     -webkit-transform: translateX(-100%);
             transform: translateX(-100%);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
   .header .list {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    padding-top: 10rem;
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
@@ -867,6 +867,7 @@ ul.friends__list.slider {
     display: -ms-flexbox;
     display: flex;
     margin-right: 2rem;
+    z-index: 2;
   }
   .main.active-menu {
     -webkit-transition: 0.5s ease-in-out;
