--- a/pages/pets/pets.scss
+++ b/pages/pets/pets.scss
@@ -140,16 +140,16 @@ font: {
 .darkScreen {
     height: 100vh;
     width: 100vw;
-    position: absolute;
+    position: fixed;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     z-index: 1;
     .dark{
-    position: absolute;
-    height: 100%;
-    width: 100%;
+        height: 100vh;
+        width: 100vw;
+        position: fixed;
     background-color: rgba(41, 41, 41, 0.6);
     z-index: 2;
     }
@@ -258,7 +258,7 @@ font: {
     }   
 }
 .menu{
-    display: flex;
+    display: none;
     width: 44.3rem;
     margin-left: 0;
     margin-right: 0;
@@ -275,12 +275,11 @@ font: {
 .burger-menu{
     display: none;
     cursor: pointer;
-    //display: flex;
+    z-index: 2;
     justify-content: center;
     align-items: center;  
     width: 5rem;
     height: 5rem;
-    
         &__line{
         position: relative;   
         width: 3rem;
@@ -333,7 +332,7 @@ font: {
         line-height: 160%;     
         &__disabled{
             text-decoration: none;
-            color:$color-dark-s;
+            color:$color-dark-2xl;
             &:hover{
                 color: $color-dark-l;
                 cursor: pointer;
@@ -679,23 +678,23 @@ ul.friends__list.slider{
             }
         }
         .menu {
-            display: flex;    
-            position: absolute;
-            right: -32rem;
+            z-index: 1;
+            display: none;
+            position: fixed;
+            right: 0;
             top: 0;
             width: 32rem;
-            background-color:#f5f5f5;
-            height: 823px;   
+            background-color:#ecececf5;
+            height: calc(var(--vh, 1vh) * 100); 
             transition: transform 0.3s ease-in-out;
         }
         .menu.active{
             transition: transform 0.3s ease-in-out;
             transform: translateX(-100%);
-              
+            display: flex;  
         }
         .list{
             flex-direction: column;
-            padding-top: 10rem;
             justify-content: flex-start;
             margin-top: 15rem;
             align-items: center;
@@ -710,6 +709,7 @@ ul.friends__list.slider{
         .burger-menu{
             display: flex;
             margin-right: 2rem;
+            z-index: 2;
         }
         
     }
@@ -789,7 +789,6 @@ ul.friends__list.slider{
             display: block;  
             width: 5rem;
             height: 5rem;  
-              
                 span{
                 display: block;   
                 width: 3rem;
