--- a/pages/main/main.scss
+++ b/pages/main/main.scss
@@ -1232,8 +1232,7 @@ button{
                     
                 }
                 .modal-description__description{
-                    margin-bottom: 1.9rem;
-                    font-size: 1.3rem;
+                    display: none;
                 }
                 .modal-description__list{
                     li{
