--- a/pages/pets/pets.css
+++ b/pages/pets/pets.css
@@ -683,14 +683,22 @@ ul.friends__list.slider {
     padding-top: 3.5rem;
   }
   .darkScreen .modal-box {
-    width: 63rem;
+    width: 31rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .darkScreen .modal-box__pic img {
-    height: 35rem;
-    width: 35rem;
+    height: 30rem;
+    width: 30rem;
   }
   .darkScreen .modal-box_main {
-    max-width: 65rem;
+    max-width: 30rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .darkScreen .modal-box .modal-description {
     max-width: 26rem;
@@ -700,8 +708,7 @@ ul.friends__list.slider {
     margin-bottom: 2rem;
   }
   .darkScreen .modal-box .modal-description .modal-description__description {
-    margin-bottom: 1.9rem;
-    font-size: 1.3rem;
+    display: none;
   }
   .darkScreen .modal-box .modal-description .modal-description__list li {
     padding-bottom: 0.6rem;
